feat: Implement login modal for publishing ads
Integrates a new login/signup modal into the application, accessible via the header's 'Access' button and on the publish ad page. This feature allows users to log in or create an account before publishing their property listings, enhancing user authentication and workflow for ad creation. Includes internationalized text for the modal in PT, EN, and ES.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -114,6 +114,15 @@
       "advantage3Content": "We have a wide range of tools to improve the position of your ad and gain visibility."
     }
   },
+  "loginModal": {
+    "title": "Log in or sign up to publish your ad",
+    "description": "Publish your ad to be seen by millions of people looking for their next property.",
+    "emailLabel": "Your email",
+    "continueButton": "Continue",
+    "socialLoginPrompt": "You can also",
+    "googleButton": "Continue with Google",
+    "appleButton": "Continue with Apple"
+  },
   "footer": {
     "text": "Quality Home Real Estate Portal. All rights reserved."
   }
