feat: Integrate Google Sign-In and user authentication
Adds support for Google Sign-In to allow users to authenticate with their Google accounts. Includes JWT decoding logic, user type definition, and updates to the Header component to display user information and a logout option. Updates are also made to the locale files to include Portuguese, English, and Spanish translations for new UI elements related to user authentication.

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,4 @@
+
 {
   "header": {
     "nav": {
@@ -8,7 +9,8 @@
     "access": "Access",
     "openMenu": "Open menu",
     "closeMenu": "Close menu",
-    "menuTitle": "Menu"
+    "menuTitle": "Menu",
+    "logout": "Logout"
   },
   "hero": {
     "defaultTitle": "Discover your new home, today.",
