--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,7 +9,8 @@
     "access": "Access",
     "openMenu": "Open menu",
     "closeMenu": "Close menu",
-    "menuTitle": "Menu"
+    "menuTitle": "Menu",
+    "logout": "Logout"
   },
   "hero": {
     "defaultTitle": "Discover your new home, today.",
