--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,3 +1,4 @@
+
 {
   "header": {
     "nav": {
@@ -8,7 +9,8 @@
     "access": "Acessar",
     "openMenu": "Abrir menu",
     "closeMenu": "Fechar menu",
-    "menuTitle": "Menu"
+    "menuTitle": "Menu",
+    "logout": "Sair"
   },
   "hero": {
     "defaultTitle": "Descubra seu novo lar, hoje.",
