--- a/public/locales/pt.json
+++ b/public/locales/pt.json
@@ -9,7 +9,8 @@
     "access": "Acessar",
     "openMenu": "Abrir menu",
     "closeMenu": "Fechar menu",
-    "menuTitle": "Menu"
+    "menuTitle": "Menu",
+    "logout": "Sair"
   },
   "hero": {
     "defaultTitle": "Descubra seu novo lar, hoje.",
