feat: Add location confirmation modal and Google Maps integration
Integrates Google Maps Places API to enhance location selection functionality.
Adds a new modal for confirming property location, allowing users to adjust the pin's position if necessary.
Introduces translations for the new modal and the "Season" operation type in Portuguese, English, and Spanish.

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,3 @@
-
 {
   "header": {
     "nav": {
@@ -99,7 +98,8 @@
       "operation": {
         "label": "Operation",
         "sell": "Sell",
-        "rent": "Rent"
+        "rent": "Rent",
+        "season": "Season"
       },
       "location": {
         "label": "Property location",
@@ -131,6 +131,13 @@
         "title": "Are you a real estate professional?",
         "link": "Learn about the advantages we offer for professionals"
       }
+    },
+    "locationConfirmationModal": {
+      "title": "Is this the right place?",
+      "subtitle": "If it's not well-located, you can drag the pin to the correct position.",
+      "countryInfo": "Brazil",
+      "confirmButton": "Confirm address",
+      "backButton": "Go back to writing the address"
     }
   },
   "footer": {
