--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,4 +1,3 @@
-
 {
   "header": {
     "nav": {
@@ -142,7 +141,8 @@
       "operation": {
         "label": "Operation",
         "sell": "Sell",
-        "rent": "Rent"
+        "rent": "Rent",
+        "season": "Season"
       },
       "location": {
         "label": "Property location",
@@ -174,6 +174,13 @@
         "title": "Are you a real estate professional?",
         "link": "Learn about the advantages we offer for professionals"
       }
+    },
+    "locationConfirmationModal": {
+      "title": "Is this the right place?",
+      "subtitle": "If it's not well-located, you can drag the pin to the correct position.",
+      "countryInfo": "Brazil",
+      "confirmButton": "Confirm address",
+      "backButton": "Go back to writing the address"
     }
   },
   "footer": {
